--- a/src/styles/components/carousel_imoveis.css
+++ b/src/styles/components/carousel_imoveis.css
@@ -7,6 +7,7 @@
     /* justify-content: center;
     align-items: center; */
     padding-top: 0%;
+    padding-left: 0%;
     padding-bottom: 0%;
 }
 
@@ -17,7 +18,8 @@
 }
 
 .imovel {
-    width: "100%";
+    padding-left: 0%!important;
+    width: 100%;
     display: "absolute"
 }
 
@@ -26,21 +28,31 @@
     grid-template-columns: repeat(2, 1fr);
     margin-top: 50px;
     height: 70%;
+    width: 100%;
     /* padding-top: 6%; */
     padding-bottom: 4%;
 }
 
 .grid_infos img {
     border-radius: 20px;
-    height: 366px;
-    width: 550px;
+    height: auto;
+    width: 100%;
+    height: 50%;
 }
 
 
 .fotos_imovel {
     display: flex;
+    width: 100%;
+    height: auto;
     text-align: center;
     align-content: center;
+}
+
+.fotos_imovel img {
+    border-radius: 20px;
+    height: 366px;
+    width: 550px;
 }
 
 
@@ -220,6 +232,64 @@
     }
 }
 
-@media screen and (max-width: 560px) {}
+@media screen and (max-width: 560px) {
+    .carousel_container {
+        width: 100vw;
+        justify-content: center;
+    }
+    .carousel-container img {
+        border-radius: 22px;
+        height: auto;
+        width: 80%;
+    }
+    .grid_infos img {
+        border-radius: 20px;
+        height: auto;
+        width: 80%;
+    }
+    .imovel {
+        /* margin-left: 12%; */
+    }
+    .fotos_imovel {
+        width: 100vw;
+        height: 30vh;
+    }
+    .botao_voltar_imovel {
+        position: absolute;
+        margin-right: 90%;
+        margin-bottom: 7%;
+    }
+    .botao_passar_imovel {
+        position: absolute;
+        margin-left: 83%;
+        margin-bottom: 7%;
+    }
+    /* Referente aos textos */
+
+    .title h2 {
+        text-align: center;
+        font-size: 25px;
+    }
+    .descricao_imovel {
+        width: 100vw;
+        height: 120%;
+    }
+
+    .descricao_imovel p {
+        font-size: 18px;
+    }
+
+    .descricao_imovel ul {
+        font-size: 16px;      
+    }
+
+    .descricao_imovel li {
+        margin-top: 10px;
+    }
+
+    .descricao_imovel p1 {
+        font-size: 14px;
+    }
+}
 
 @media screen and (max-width: 320px) {}
