--- a/src/styles/pages/imoveis.css
+++ b/src/styles/pages/imoveis.css
@@ -80,11 +80,24 @@
         margin-right: 0px;
         margin-left: 50px;
     }
+    .botao_contato {
+        padding-top: 5%;
+    }
 
 }
 
 @media screen and (max-width: 560px) {
-    
+    .carousel_background {
+        width: 100%;
+        height: 100vh;
+    }
+    .container_botao_contato {
+        justify-content: center;
+        margin-top: -100px;
+    }
+    .botao_contato {
+        padding-top: 9%;
+    }
 }
 
 @media screen and (max-width: 320px) {
