--- a/src/styles/components/header.css
+++ b/src/styles/components/header.css
@@ -29,10 +29,10 @@
 
 /* Estilos para a barra de navegação móvel */
 .nav-idiom {
-	border-radius: 20px;
+	border-radius: 15px;
 	position: absolute;
 	width: 22%;
-	height: 170%;
+	height: 130%;
 	background-color: rgb(255, 255, 255);
 	flex-direction: column;
 	align-items: center;
@@ -77,7 +77,14 @@
 }
 
 @media screen and (max-width: 920px) {
-
+	.nav-idiom {
+		width: 25%;
+		height: 110%;
+		margin-left: -10%;
+	}
+	.nav-idiom li {
+		font-size: 16px;
+	}
 }
 
 
@@ -87,6 +94,12 @@
 	}
 	.header li {
 		font-size: 9px;
+	}
+	.nav-idiom li {
+		font-size: 6px;
+	}
+	.nav-idiom ul {
+		gap: 3px;
 	}
 }
 
