--- a/src/styles/components/carousel_imoveis.css
+++ b/src/styles/components/carousel_imoveis.css
@@ -28,7 +28,8 @@
     grid-template-columns: repeat(2, 1fr);
     margin-top: 50px;
     height: 70%;
-    width: 100%;
+    width: 95vw;
+    /* gap: 5%; */
     /* padding-top: 6%; */
     padding-bottom: 4%;
 }
@@ -36,7 +37,7 @@
 .grid_infos img {
     border-radius: 20px;
     height: auto;
-    width: 100%;
+    /* width: 100vw; */
     height: 50%;
 }
 
@@ -51,8 +52,8 @@
 
 .fotos_imovel img {
     border-radius: 20px;
-    height: 366px;
-    width: 550px;
+    height: 350px;
+    width: 500px;
 }
 
 
@@ -113,14 +114,14 @@
 
 .botao_voltar_foto img {
     transform: scaleX(-1);
-    height: 60px;
-    width: 60px;
+    height: 20%;
+    width: 100%;
     opacity: 0.6;
 }
 
 .botao_passar_foto img {
-    height: 60px;
-    width: 60px;
+    height: 20%;
+    width: 100%;
     opacity: 0.6;
 }
 
@@ -148,7 +149,7 @@
 }
 
 .descricao_imovel {
-    width: 650px;
+    width: 90%;
     overflow-y: auto;
 }
 
@@ -202,14 +203,26 @@
         display: grid;
         grid-template-columns: none;
         grid-template-rows: repeat(2, 1fr);
-        gap:5%
+        gap:5%;
+        width: 80vw;
     }
     .fotos_imovel {
+        width: 80vw;
         justify-content: center;
+    }
+    .fotos_imovel img {
+        border-radius: 20px;
+        height: 300px;
+        width: 400px;
     }
     .botao_voltar_imovel {
         margin-left: -1%;
     }
+    .botao_voltar_foto img, .botao_passar_foto img{
+        width: 60px;
+        height: 60px;
+    }
+    
     /* Referente aos textos */
 
     .title h2 {
@@ -217,15 +230,16 @@
         font-size: 30px;
     }
     .descricao_imovel {
-        height: 130%;
+        width: 100%;
+        height: 110%;
     }
 
     .descricao_imovel p {
-        font-size: 22px;
+        font-size: 18px;
     }
 
     .descricao_imovel ul {
-        font-size: 20px;      
+        font-size: 18px;      
     }
 
     .descricao_imovel li {
@@ -247,6 +261,9 @@
         height: auto;
         width: 80%;
     }
+    .grid_infos {
+        grid-template-rows: 40% 60%;
+    }
     .grid_infos img {
         border-radius: 20px;
         height: auto;
@@ -256,6 +273,14 @@
         width: 100vw;
         height: 30vh;
     }
+    .fotos_imovel img {
+        height: 200px;
+        width: 300px;
+    }
+    .botao_voltar_foto img, .botao_passar_foto img{
+        width: 60px;
+        height: 60px;
+    }
     .botao_voltar_imovel {
         position: absolute;
         margin-right: 90%;
@@ -264,6 +289,7 @@
     .botao_passar_imovel {
         position: absolute;
         margin-left: 83%;
+        margin-bottom: 7%;
     }
     /* Referente aos textos */
 
@@ -273,7 +299,7 @@
     }
     .descricao_imovel {
         width: 100vw;
-        height: 120%;
+        height: 100%;
     }
 
     .descricao_imovel p {
@@ -293,4 +319,14 @@
     }
 }
 
-@media screen and (max-width: 320px) {}
+@media screen and (max-width: 320px) {
+    .fotos_imovel img {
+        height: 150px;
+        width: 230px;
+    }
+    .botao_voltar_foto img, .botao_passar_foto img{
+        width: 50px;
+        height: 50px;
+        margin-top: -65%;
+    }
+}
