--- a/src/styles/components/texto.css
+++ b/src/styles/components/texto.css
@@ -228,7 +228,7 @@
     }
     .Texto p1 {
         margin-top: 0%;
-        font-size: 13px;
+        font-size: 14px;
     }
     .Texto li {
         font-size: 16px;
@@ -241,7 +241,27 @@
 }
 
 @media screen and (max-width: 320px) {
+    .Texto h2 {
+        font-size: 25px;
+    }
+    .Texto h3 {
+        font-size:10px;
+        margin-left: 10%;
+        margin-right: 10%;
+    }
+    .Texto p {
+        font-size: 13px;
+    }
     .Texto p1 {
+        margin-top: 0%;
         font-size: 11px;
+    }
+    .Texto li {
+        font-size: 13px;
+        padding-left:5%;
+        padding-right:5%;
+    }
+    .Texto p3 {
+        font-size: 10px;
     }
 }
