--- a/src/styles/pages/imoveis.css
+++ b/src/styles/pages/imoveis.css
@@ -1,7 +1,7 @@
 .imoveis {
     position: relative;
     overflow: hidden;
-    height: 120vh;
+    height: 1000px;
     display: flex;
     padding-top: 10%;
     padding-bottom: 5%;
@@ -22,7 +22,7 @@
 
 .carousel_background {
     width: 100%;
-    height: 90vh;
+    height: 700px;
     font-size: 24px;
     font-weight: bold;
     background-color: rgb(255, 255, 255, 0.6);
@@ -85,17 +85,21 @@
     .botao_contato {
         padding-top: 5%;
     }
+    .carousel_background {
+        height: 800px;
+    }
 
 }
 
 @media screen and (max-width: 560px) {
     .carousel_background {
         width: 100%;
-        height: 100vh;
+        height: 90%;
     }
     .container_botao_contato {
         justify-content: center;
         margin-top: -100px;
+        padding-right: 0px;
     }
     .botao_contato {
         padding-top: 9%;
