--- a/src/styles/pages/index.css
+++ b/src/styles/pages/index.css
@@ -33,7 +33,8 @@
 .container_botao_home {
     display: flex;
     justify-content: center;
-    margin-top: 5%;
+    align-content: center;
+    align-items: center;
     opacity: 0.8;
 }
 
@@ -316,7 +317,7 @@
 
 @media screen and (max-width: 920px){
     .secao1 {
-        height: 100vh;
+        height: 700px;
     }
     .Background_inicio {
         height: 135%;
@@ -324,11 +325,13 @@
         background-position: top;
     }
     .img_logo {
-        margin-top: 40%;
-        width:90%;
+        margin-top: 20%;
+        width:60%;
         height:auto; 
     }
-    
+    .botao_home {
+        width: 40%
+    }
     .Background_porque_trab {
         height:100%;
     }
@@ -337,13 +340,16 @@
         grid-template-columns:unset;
         grid-template-rows: repeat(2, 1fr);
     }
+    .secao2 {
+        height: 700px;
+    }
     .container_img_porque {
         margin-bottom: 5%;
         align-items: center;
         order:2;
     }
     .img_porque {
-        width: 55%;
+        width: 40%;
     }
     .container_texto_porque {
         display: flex;
@@ -369,6 +375,7 @@
         width: 90%;
         height: 100%;
         padding-left: 2%;
+        padding-right: 3%;
     }
     .img-icon {
         position: flex;
@@ -377,11 +384,11 @@
         width:90%;
         height: auto;
         margin-top:0%;
-        /* margin-left: 2%; */
+        margin-left: 5%;
     }
     .secao4 {
         overflow: hidden;
-        height: 140vh;
+        height: 1000px;
     }
     .grid_concierge {
         grid-template-columns: repeat(1,1fr);
@@ -414,7 +421,7 @@
         order:2;
     }
     .img_porque {
-        width: 80%;
+        width: 70%;
     }
     .container_texto_porque {
         padding-left: 10%;
@@ -424,7 +431,7 @@
         height: 80%;
     }
     .secao4 {
-        height: 120vh;
+        height: 800px;
     }
     .grid_concierge {
         height: 60%;
@@ -434,12 +441,16 @@
     }
     .img_concierge {
         margin-top: 25%;
-        height: 70%;
+        height: 100%;
     }
+    .container_frase_disney {
+        margin-top: 30%;
+        font-size: 10px;
+    }  
 }
 
 @media screen and (max-width: 320px) {
-    .secao1 {
-        height:60vh
+    .grid_concierge {
+        grid-template-rows: 70% 30%;
     }
 }
